--- a/src/Board.css
+++ b/src/Board.css
@@ -1,3 +1,20 @@
 .Board {
-    margin: 0 auto;
+    margin: 100px auto;
+    border: 3px solid black;
+    border-radius: 10px;
   }
+
+.Board-winner {
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  background-color: white;
+  color: slateblue;
+  margin: 200px;
+  padding: 50px;
+  width: 50vw;
+  height: 10vh;
+  font-size: 4em;
+  border: 0px;
+  border-radius: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
